--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -1,20 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".MainActivity3">
 
+    <RelativeLayout
+        android:padding="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+        <EditText
+            android:padding="7dp"
+            android:background="@drawable/edittextbackground"
+            android:inputType="number"
+            android:layout_marginRight="10dp"
+            android:layout_centerVertical="true"
+            android:hint="Product id"
+            android:layout_toLeftOf="@id/button2"
+            android:id="@+id/edittext3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></EditText>
+        <androidx.appcompat.widget.AppCompatButton
+            android:background="@drawable/buttonbackground"
+            android:textColor="@color/white"
+            android:layout_centerVertical="true"
+            android:text="With id"
+            android:textAllCaps="false"
+            android:id="@+id/button2"
+            android:layout_alignParentEnd="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"></androidx.appcompat.widget.AppCompatButton>
+    </RelativeLayout>
+    <ProgressBar
+        android:visibility="gone"
+        android:id="@+id/progeressbar3"
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></ProgressBar>
     <androidx.cardview.widget.CardView
+        android:visibility="gone"
+        android:id="@+id/cardview1"
         app:cardCornerRadius="8dp"
         app:cardUseCompatPadding="true"
         app:cardElevation="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <RelativeLayout
-            android:id="@+id/relativelay1"
-            android:clickable="true"
-            android:background="?attr/selectableItemBackground"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <LinearLayout
@@ -25,12 +59,12 @@
                 <ImageView
                     android:scaleType="centerInside"
                     android:src="@drawable/pr"
-                    android:id="@+id/imageview1"
+                    android:id="@+id/imageview3"
                     android:layout_width="match_parent"
                     android:layout_height="150dp"></ImageView>
                 <TextView
-                    android:id="@+id/textview1"
-                    android:singleLine="true"
+                    android:id="@+id/textview3"
+
                     android:layout_margin="10dp"
                     android:text="Galaxy"
                     android:layout_width="match_parent"
@@ -46,7 +80,6 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
-
                     android:padding="8dp"
                     android:src="@drawable/ic_round_favorite_border_24"
                     android:layout_width="wrap_content"
