--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".MainActivity4">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardview4"
         app:cardCornerRadius="8dp"
         app:cardUseCompatPadding="true"
         app:cardElevation="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <RelativeLayout
-            android:id="@+id/relativelay1"
-            android:clickable="true"
-            android:background="?attr/selectableItemBackground"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <LinearLayout
@@ -25,12 +25,11 @@
                 <ImageView
                     android:scaleType="centerInside"
                     android:src="@drawable/pr"
-                    android:id="@+id/imageview1"
+                    android:id="@+id/imageview4"
                     android:layout_width="match_parent"
                     android:layout_height="150dp"></ImageView>
                 <TextView
-                    android:id="@+id/textview1"
-                    android:singleLine="true"
+                    android:id="@+id/textview4"
                     android:layout_margin="10dp"
                     android:text="Galaxy"
                     android:layout_width="match_parent"
@@ -46,7 +45,6 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
-
                     android:padding="8dp"
                     android:src="@drawable/ic_round_favorite_border_24"
                     android:layout_width="wrap_content"
@@ -55,5 +53,4 @@
         </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
-
 </LinearLayout>
